[gd_scene format=3 uid="uid://wsk41q52641b"]

[ext_resource type="PackedScene" uid="uid://c67gru2ubp5ke" path="res://RESOURCES/UI/_alpha_UnitSelection/_alpha_unit_grid_entry.tscn" id="1_2u64n"]
[ext_resource type="Script" uid="uid://cu0hrefgahdx8" path="res://RESOURCES/UI/_alpha_UnitSelection/_alpha_unit_selection.gd" id="1_jtsas"]
[ext_resource type="PackedScene" uid="uid://cs0nm4n8i48as" path="res://RESOURCES/UI/_alpha_UnitSelection/_alpha_squad_entry.tscn" id="2_5swuv"]

[node name="UnitSelection" type="CanvasLayer" unique_id=127427389 node_paths=PackedStringArray("ReadyButton", "RemainingSlotsText", "LevelOverride", "UnlockAbilities", "DebugOptionsParent")]
script = ExtResource("1_jtsas")
UnitEntryPrefab = ExtResource("1_2u64n")
SquadEntryPrefab = ExtResource("2_5swuv")
ReadyButton = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/StartButtons/ReadyButton")
RemainingSlotsText = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer/Remaining Slots")
LevelOverride = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer/LevelOverride")
UnlockAbilities = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer/CheckButton")
DebugOptionsParent = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=120279140]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer" unique_id=1844903900]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer" unique_id=521194160]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer" unique_id=2115249667]
layout_mode = 2

[node name="UnitSelectionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1635748966]
layout_mode = 2
text = "(ALPHA) Unit Selection"

[node name="UnitGridParent" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1202295720]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UnitEntryParent" type="GridContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/UnitGridParent" unique_id=1946076830]
unique_name_in_owner = true
custom_minimum_size = Vector2(624.15, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
columns = 4

[node name="TeamPreview" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1960182141]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview" unique_id=2118334375]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer" unique_id=1838293558]
layout_mode = 2
text = "Current Units:"

[node name="SquadEntryParent" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer" unique_id=1142706129]
unique_name_in_owner = true
layout_mode = 2

[node name="_alpha_SquadEntry" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer/SquadEntryParent" unique_id=346760584 instance=ExtResource("2_5swuv")]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer" unique_id=539144680]
layout_mode = 2
size_flags_horizontal = 3

[node name="Remaining Slots" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/TeamPreview/HBoxContainer" unique_id=1446747886]
layout_mode = 2
text = "Remaining Slots: 3"

[node name="LevelOverride" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=402827991]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride" unique_id=585793128]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer" unique_id=1938311516]
layout_mode = 2
text = "Level Override"

[node name="LevelOverride" type="LineEdit" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer" unique_id=1109935918]
layout_mode = 2
text = "0"
alignment = 2
max_length = 2
select_all_on_focus = true

[node name="Control" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer" unique_id=165562361]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/LevelOverride/HBoxContainer" unique_id=674998784]
layout_mode = 2
text = "Auto Unlock Abilities"

[node name="StartButtons" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=2104445417]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/StartButtons" unique_id=2034790653]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Start"
